--- a/css/styles.css
+++ b/css/styles.css
@@ -153,8 +153,8 @@ width: 25%;
   width: 100px;
 }
 
-.gradient-overlay {
+/* .gradient-overlay {
   width: 100%;
  height: 100%;
   mask-image: radial-gradient(ellipse at center, black 70%, transparent 90%);
- }
+ } */
